remove background-image before using background-color

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 		    $('body').css('background-image', 'url("' + data.background_image + '")');
 		}
 		else {
+                    $('body').css('background-image', 'none');
                     $('body').css('background-color', '#' + data.background_color);
 	        }
             });
